Curriculum Vitae Camila Benavides, Diseño desde el Código 2018.

--- a/index.html
+++ b/index.html
@@ -1,19 +1,103 @@
 <!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tarea.1</title>
-</head>
-<body>
-    <h1>Hola Mundo</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa corporis error quas id, eius saepe.</p>
-    <p>Lorem ipsum dolor, sit amet consectetur <strong>adipisicing elit</strong>. Cupiditate recusandae omnis animi impedit repellendus aliquam.</p>
-    <ul>
-        <li>Lorem ipsum dolor sit amet</li>
-        <li>Quick brown fox jumps over the lazy dog</li>
-        <li>Jovencillo emponzoñado de whisky, qué figurota exhibe</li>
-    </ul>
-</body>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Curriculum Vitae Camila Benavides</title>
+    <!--Nombre y Datos Personales-->
+    <h1>Camila Constanza Benavides Soto</h1>
+    <p>RUT: 19.596.229-4</p>
+    <p>Fecha de Nacimiento: 10 de febrero de 1997</p>
+  </head>
+  <body>
+    <h2>Contacto</h2>
+      <p>Dirección: Blanca Estela 1055 D-352, Concón, Viña del Mar</p>
+      <p>Teléfono: +56979781810</p>
+      <p>Mail: camilabenavidessoto@gmail.com</p>
+    <!--Resumen acerca de los puntos relevantes-->
+    <h2>Resumen</h2>
+      <p>Actualmente cursando 4º año de Diseño Gráfico en la Pontificia Universidad Católica de Valparaíso. Manejo de idioma Inglés fluido. 21 años.</p>
+    <!--Desglose de datos acerca de la formación educacional básica, media y superior-->
+    <h2>Formación</h2>
+      <h3>Educación Básica</h3>
+        <ul>
+          <li>1999-2003
+            <p>St. John's School</p>
+            <p>Concepción</p>
+            <p>Pre-kinder a 1º básico</p>
+          </li>
+          <li>2004
+            <p>Colegio Capellán Pascal</p>
+            <p>Viña del Mar</p>
+            <p>2º básico</p>
+          </li>
+          <li>2005-2010
+            <p>St. Margaret's British School for girls</p>
+            <p>Viña del Mar</p>
+            <p>3º a 8º básico</p>
+          </li>
+        </ul>
+      <h3>Educación Media</h3>
+        <ul>
+          <li>2010-2014
+            <p>St. Margaret's British School for girls</p>
+            <p>Viña del Mar</p>
+            <p>1º a 4º medio</p>
+          </li>
+        </ul>
+      <h3>Educación Superior</h3>
+        <ul>
+          <li>2015 a la fecha
+            <p>Pontificia Universidad Católica de Valparaíso</p>
+            <p>Valparaíso</p>
+            <p>Cursando carrera de Diseño Gráfico</p>
+          </li>
+        </ul>
+      <!--Información detallada acerca de cursos y talleres de la carrera de Diseño Gráfico-->
+      <h4>Talleres Realizados</h4>
+        <ul>
+          <li>Taller del Hacer Visible</li>
+          <li>Taller del Color</li>
+          <li>Taller de la Ocasión Editorial</li>
+          <li>Taller de Tipografía</li>
+          <li>Taller de Diseño de Interacción</li>
+          <li>Taller de Diseño de Servicios</li>
+        </ul>
+      <h4>Otros Cursos Realizados</h4>
+         <ul>
+           <li>Diseño de Experiencia de Usuario</li>
+           <li>Presentación al Diseño</li>
+           <li>Historia de Valparaíso</li>
+           <li>Plástica Contemporánea</li>
+           <li>Construcción</li>
+           <li>Diseño desde el Código</li>
+         </ul>
+        <h4>Proyectos</h4>
+          <ul>
+            <li>
+              <h5>Edición Poema Godofredo Iommi</h5>
+              <p>Año: 2017</p>
+              <p>Se propone una edición que contiene el poema 15 de abril 1983 de Godofredo Iommi y el proceso gráfico de los trabajos de observación del trimestre. Edición de 16 x 96 cm. Tiene un anverso con partes de la gráfica, hecha a partir del seguimiento del contraste de planos del horizonte de concón, y el poema con sus respectivos versos en tipografía Palatino, y un reverso con un verso especial seleccionado del poema y la gráfica mostrada en su totalidad. Impresa en papel Blanco Sahara.</p>
+            </li>
+            <li>
+              <h5>Serie de Pictogramas</h5>
+              <p>Año: 2017</p>
+              <p>Se propone una serie de pictogramas basada en las cosas propias de la localidad de San Félix en el norte del País. Se propone una grilla y una forma de trazo común para la línea gráfica de todos los pictogramas. La edición final se constituye de 21 pictogramas pertenecientes a distintos aspectos de la vida en San Félix, como la flora y fauna. De esta manera se trae a presencia la cultura local en un lenguaje porporcionado y universal como son las imágenes.</p>
+            </li>
+            <li>
+              <h5>Cosmos</h5>
+              <p>Año: 2018</p>
+              <p>Creación de un juego de mesa a partir de la distinción de los elementos que dan forma a un juego. Se entiende el juego como un desafío donde el usuario se sumerge a un mundo cautivante para perseguir un objetivo. Cosmos es un juego de azar y estrategia que invita a niños y adultos a conquistar galaxias en un tablero volumétrico a la vez que van aprendiendo acerca del espacio y todos sus miesterios. A medida que el usuario va moviendo su ficha para ir en búsqueda de las galaxias se va encontrando con trampas que retrasan o aceleran su juego. Tiene un objetivo lúdico y educativo.</p>
+            </li>
+          </ul>
+        <!--Otros datos relevantes acerca de idioma y actividades-->
+        <h2>Otros Antecedentes</h2>
+          <ul>
+            <li>Preliminary English Test, certificado otorgado por la Universidad de Cambridge. Acredita el dominio del idioma inglés con un nivel orientado a la comunicación personal.</li>
+            <li>First Certificate in English, certificado otorgado por la Universidad de Cambridge. Acredita un nivel avanzado de dominio del idioma inglés.</li>
+            <li>Certificado en Historia Universal Nivel Medio del Programa de Diploma. Otorgado por la International Baccalaureate Organization.</li>
+            <li>Certificado en Inglés Nivel Medio del Programa de Diploma. Otorgado por la International Baccalaureate Organization.</li>
+            <li>Participación de 2 años en CAS (Creatividad, Actividad y Servicio), servicio de ayuda social voluntaria.</li>
+            <li>Elegida por docentes del St. Margaret's British School para ocupar el cargo estudiantil de Prefect en 4º año de enseñanza media.</li>
+          </ul>
+  </body>
 </html>
