--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Curriculum Vitae Camila Benavides</title>
     <!--Nombre y Datos Personales-->
+    <img src="camila-benavides.JPG" alt="Foto Personal" width="120">
     <h1>Camila Constanza Benavides Soto</h1>
     <p>RUT: 19.596.229-4</p>
     <p>Fecha de Nacimiento: 10 de febrero de 1997</p>
@@ -71,7 +72,7 @@
            <li>Construcción</li>
            <li>Diseño desde el Código</li>
          </ul>
-        <h4>Proyectos</h4>
+        <h4>Algunos Proyectos</h4>
           <ul>
             <li>
               <h5>Edición Poema Godofredo Iommi</h5>
@@ -98,6 +99,9 @@
             <li>Certificado en Inglés Nivel Medio del Programa de Diploma. Otorgado por la International Baccalaureate Organization.</li>
             <li>Participación de 2 años en CAS (Creatividad, Actividad y Servicio), servicio de ayuda social voluntaria.</li>
             <li>Elegida por docentes del St. Margaret's British School para ocupar el cargo estudiantil de Prefect en 4º año de enseñanza media.</li>
+            <li>Participación en el Encuentro Nacional de Historia de colegios británicos, año 2013.</li>
+            <li>Participación en el Encuentro Nacional de Física de colegios británicos, año 2012.</li>
+            <li>Actividades deportivas: Volleyball, Atletismo, Fitness</li>
           </ul>
   </body>
 </html>
